mudando as imagens do banner rotativo

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <div class="carousel slide carousel-dark" data-bs-ride="carousel" data-bs-touch="true" id="promocao">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://picsum.photos/1280/420" alt="Imagem1" class="w-100 d-block">
+                    <img src="./imagens/Imagem 1.png" alt="Imagem1" class="w-100 d-block">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://picsum.photos/1280/420?random=2" alt="Imagem1" class="w-100 d-block">
+                    <img src="./imagens/Imagem 2.png" alt="Imagem1" class="w-100 d-block">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://picsum.photos/1280/420?random=3" alt="Imagem1" class="w-100 d-block">
+                    <img src="./imagens/Imagem 3.png" alt="Imagem1" class="w-100 d-block">
                 </div>
             </div>
             <button class="carousel-control-next" data-bs-target="#promocao" data-bs-slide="next">
