mudando o overflow do carrinho

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <div class="offcanvas offcanvas-end" id="carrinho" tabindex="-1">
+    <div class="offcanvas offcanvas-end overflow-y-scroll" id="carrinho" tabindex="-1">
         <div class="CarrinhoSemItens">
         <div class="offcanvas-header bgCinza align-items-center d-flex py-3">
             <span class="invisible">texto</span>
