--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1/font/bootstrap-icons.css">
+    
 
     <style>
         .bgCinza{
@@ -53,12 +54,12 @@
         <div class="offcanvas-body">
             <div class="container h-100 d-flex flex-column">
                 <a href="login.html" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom">Entrar</a>
-                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom">Roupas de inverno</a>
-                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom">Masculino</a>
-                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom">Feminino</a>
-                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom">Tênis</a>
-                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom">Bonés</a>
-                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom mb-5">Lançamentos</a>
+                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom c">Roupas de inverno</a>
+                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom c">Masculino</a>
+                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom c">Feminino</a>
+                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom c">Tênis</a>
+                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom c">Bonés</a>
+                <a href="#" class="d-block p-3 text-decoration-none text-dark fw-bolder border-bottom mb-5 c">Lançamentos</a>
 
                 <div class="input-group mb-3">
                     <input type="search" class="form-control" placeholder="Buscar em nossa loja">
@@ -66,7 +67,7 @@
                 </div>
 
                 <div class="d-flex align-items-center ms-2">
-                    <a href="#" class="text-decoration-none d-block border rounded-circle p-2 border-dark me-2">
+                    <a href="https://www.linkedin.com/in/leandro-borotta-ab36b224b/" target="_blank" class="text-decoration-none d-block border rounded-circle p-2 border-dark me-2">
                         <i class="bi-linkedin fs-6 text-black"></i>
                     </a> 
                     <a href="#" class="text-decoration-none d-block border rounded-circle p-2 border-dark me-2">
@@ -325,8 +326,8 @@
     </div>
 </footer>
 
-
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="./js/modals.js"></script>
 <script src="./js/produtos.js"></script>
 <script src="./js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
