fix: corrigindo erro de quebra nos preços dos produtos

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <img src="./imagens/camisa-nike8.jpg" alt="Produto 8" class="card-img-top">
                     <div class="card-body text-center d-flex flex-column">
                         <div class="my-2">
-                            <span class="fw-bolder h5">Camisa Básica Cinza</span>
+                            <span class="fw-bolder h5">Camisa Básica Cinza</span> <br>
                             <span class="me-2">R$44,99</span>  <s>R$150,00</s>
                         </div>
                         <button class="btn btn-dark btn-comprar">Comprar</button>
